--- a/Index2.html
+++ b/Index2.html
@@ -65,6 +65,8 @@
 			<br>
 			<button type="submit" class="btn btn-primary">Completar registro</button>
 		</fieldset>
+		<label>Nombre ingresado: <input class="form-control" type="text" name="getName" id="getName"></label>
+		<label>Apellido ingresado <input type="text" class="form-control" name="getLastName" id="getLastName"></label>
 	</form>
 
 	</div>
