Added Link menus

--- a/Index2.html
+++ b/Index2.html
@@ -20,6 +20,7 @@
 				<li class="nav-item"><a class="nav-link active" href="#Part 2">Tarjetas Graficas</a></li>
 				<li class="nav-item"><a class="nav-link active" href="#Part 3">La carne</a></li>
 				<li class="nav-item"><a class="nav-link active" href="#Part 4">Colonizacion</a></li>
+				<li class="nav-item"><a class="nav-link active" href="#Part 5">Inteligencia Artificial</a></li>
 				<li class="nav-item"><a class="nav-link active" href="#footer">Final</a></li>					
 			</ul>
 		</header>
@@ -224,6 +225,7 @@
 			<li class="nav-item"><a class="nav-link px-2 text-muted" href="#Part 2">Tarjetas Graficas</a></li>
 			<li class="nav-item"><a class="nav-link px-2 text-muted" href="#Part 3">La carne</a></li>
 			<li class="nav-item"><a class="nav-link px-2 text-muted" href="#Part 4">Colonizacion</a></li>
+			<li class="nav-item"><a class="nav-link px-2 text-muted" href="#Part 5">Inteligencia Artificial</a></li>
 		</ul>
 		<p class="text-center text-muted">©Copyright 2050 de nadie. Todos los derechos revertidos.</p>
 	</footer>
