--- a/Index2.html
+++ b/Index2.html
@@ -172,35 +172,14 @@
 
 	</div>
 	<div class="form-group container">
-		<form id="form-1">
+		<form id="form">
 		<fieldset>
 			<legend>Datos Personales</legend>
 			<label>Nombre: <input type="text" name="name" placeholder="Escribe tu nombre" maxlength="50" class="form-control" id="name" required="true"></label>
 
 			<label>Apellido: <input type="text" name="input_apellido" required minlength="2" placeholder="Escribe tu apellido" maxlength="50"class="form-control" id="input-lastName"></label>
 
-			<label>Telefono: <input class="form-control" type="number" name="input_telefono" id="input-number"></label>
-
-			<label>Direccion: <input class="form-control" type="text" name="input_direccion" id="input-direction"></label>
-
 			<label>Fecha de Nacimiento<input class="form-control" type="date" name="input_fecha" required="false" id="input-birth"></label>
-
-			<label>Estatura<input class="form-control" type="number" name="input_estatura" id="input-est"></label>
-			<label>¿Que eres?<select class="form-control" name="work-select" required>
-				<option value="Valor-a-enviar-1">Estudiante</option>
-				<option value="Valor-a-enviar-1">Profesor</option>
-				<option value="Valor-a-enviar-1">Padre</option>
-				<option value="Valor-a-enviar-1" selected>Otro</option>
-			</select></label>
-		</fieldset>
-		<hr>
-		<fieldset>
-			<legend>Datos Correo</legend>
-			<label>Email: <input class="form-control" type="email" name="input_email" placeholder="ejemplo.uptc@****mail.com"></label>
-			<label>Confirmar Email: <input class="form-control" type="email" name="input_confirm_email" placeholder="ejemplo.uptc@****mail.com"></label>
-			<hr>
-			<label>Contraseña: <input class="form-control" type="password" name="input_password" ></label>
-			<label>Confirmar contraseña: <input class="form-control" type="password" name="input_password" ></label>
 		</fieldset>
 		<fieldset>
 			<legend>Finalizar</legend>
@@ -211,8 +190,9 @@
 			<label>He leido y acepto los terminos y condiciones</label>
 			<br>
 			<br>
-			<button type="submit" class="btn btn-primary">Completar registro</button>
+			<button type="submit" class="btn btn-primary" onclick="obtenerDatos()">Completar registro</button>
 		</fieldset>
+
 		<label>Nombre ingresado: <input class="form-control" type="text" name="getName" id="getName"></label>
 		<label>Apellido ingresado <input type="text" class="form-control" name="getLastName" id="getLastName"></label>
 	</form>
